--- a/filepicker/src/main/AndroidManifest.xml
+++ b/filepicker/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true">
 
         <activity
             android:name=".activity.ImagePickActivity"
@@ -30,7 +31,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/vw_FilePickerTheme" />
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
